--- a/index.html
+++ b/index.html
@@ -12,3 +12,9 @@
   <noscript>We're sorry, but this page doesn't work without JavaScript enabled. Please turn on JavaScript to view this
     page.</noscript>
 </head>
+
+<main>
+
+  <p>HELLO</p>
+  
+</main>
