Added most of frame

--- a/index.html
+++ b/index.html
@@ -13,8 +13,15 @@
     page.</noscript>
 </head>
 
+<nav></nav>
+<header>
+  <h1>The Wilson Campaign</h1>
+</header>
 <main>
-
-  <p>HELLO</p>
-  
+  <p>Main text here</p>
 </main>
+<footer>
+  <p>&copy; 2023 Wilson Campaign | Site built by ViolinCat13 | Contact us at thewilsoncampaign@outlook.com</p>
+</footer>
+
+</html>
