--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
   <meta name="viewport" content="width=device-width" />
   <script src="script.js"></script>
   <link rel="stylesheet" href="style.css" />
-  <noscript>We're sorry, but this page doesn't work without JavaScript enabled. Please turn on JavaScript to view this
-    page.</noscript>
+  <noscript>We're sorry, but this page doesn't work without JavaScript enabled. Please turn on JavaScript to view this page.</noscript>
 </head>
 
 <nav></nav>
 <header>
-  <h1>The Wilson Campaign</h1>
+  <div>
+    <h1 class="title">The Wilson Campaign</h1>
+  </div>
 </header>
 <main>
-  <p>Main text here</p>
+  <p class="block">Main text here</p>
 </main>
 <footer>
   <p>&copy; 2023 Wilson Campaign | Site built by ViolinCat13 | Contact us at thewilsoncampaign@outlook.com</p>
