Changed class from block to block-center

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
 </header>
 <main>
-  <p class="block">Main text here</p>
+  <p class="block-center">Main text here</p>
 </main>
 <footer>
   <p>&copy; 2023 Wilson Campaign | Site built by ViolinCat13 | Contact us at thewilsoncampaign@outlook.com</p>
