--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 </header>
 <main>
   <p class="block-center">Main text here</p>
+  <h2 class="subtitle">About Wilson</h2>
+  <p class="block-center">More Text Here<p>
 </main>
 <footer>
   <p>&copy; 2023 Wilson Campaign | Site built by ViolinCat13 | Contact us at thewilsoncampaign@outlook.com</p>
