Fixed centered blocks

--- a/index.html
+++ b/index.html
@@ -19,9 +19,13 @@
   </div>
 </header>
 <main>
-  <p class="block-center">Main text here</p>
+  <div class="block-center">
+    <p>Main text here</p>
+  </div>
   <h2 class="subtitle">About Wilson</h2>
-  <p class="block-center">More Text Here<p>
+  <div class="block-center">
+    <p>More Text Here<p>
+  </div>
 </main>
 <footer>
   <p>&copy; 2023 Wilson Campaign | Site built by ViolinCat13 | Contact us at thewilsoncampaign@outlook.com</p>
