added center class to title

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <nav></nav>
 <header>
-  <div>
+  <div class="center">
     <h1 class="title" id="title">The Wilson Campaign</h1>
   </div>
 </header>
