--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <nav></nav>
 <header>
   <div class="center">
-    <h1 class="title" id="title">The Wilson Campaign</h1>
+    <h1 class="title">The Wilson Campaign</h1>
   </div>
 </header>
 <main>
