--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
   <div class="block-center">
     <p>More Text Here<p>
   </div>
+  <h2 class="subtitle">Some Words From The Opposition</h2>
+  <div class="block-center">
+    <p class="qoute">"Amerway will ... work" -Everett Efird<p>
+  </div>
 </main>
 <footer>
   <p>&copy; 2023 Wilson Campaign | Site built by ViolinCat13 | Contact us at thewilsoncampaign@outlook.com</p>
