--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
   </div>
   <h2 class="subtitle">Some Words From The Opposition</h2>
   <div class="block-center">
-    <p class="qoute">"Amerway will ... work" -Everett Efird<p>
+    <p class="qoute">"Amerway will ... work" -Everett E.<p>
+    <p class="qoute">"I'm good, ... you though" -Graeme Kennedy<p>
+    <p class="qoute">"I'm too good..." -Anna W.<p>
   </div>
 </main>
 <footer>
