--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width" />
   <script src="script.js"></script>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" type="image/png" href="Untitled drawing.png" />
   <noscript>We're sorry, but this page doesn't work without JavaScript enabled. Please turn on JavaScript to view this page.</noscript>
 </head>
 
