--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </div>
 </main>
 <footer>
-  <p>&copy; 2023 Wilson Campaign | Site built by ViolinCat13 | Contact us at thewilsoncampaign@outlook.com</p>
+  <p>&copy; 2023 Wilson Campaign | Site built <a href="https://replit.com/@violincat" target="_blank">ViolinCat13</a> | Contact us at thewilsoncampaign@outlook.com</p>
 </footer>
 
 </html>
