added body text

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 </header>
 <main>
   <div class="block-center">
-    <p>Main text here</p>
+    <p>The Meriway initiative is the government's final solution to all world problems.
+ It aims to bring socialism to Merica, based on one of the most prosperous countries to have ever existed: Norway.
+Norway has all the things we dont have. They have happiness, they have low emissions, and they have a cool accent. </p>
   </div>
   <h2 class="subtitle">About Wilson</h2>
   <div class="block-center">
