added body text

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Norway has all the things we dont have. They have happiness, they have low emiss
   </div>
 </main>
 <footer>
-  <p>&copy; 2023 Wilson Campaign | Site built <a href="https://replit.com/@violincat" target="_blank">ViolinCat13</a> | Contact us at thewilsoncampaign@outlook.com</p>
+  <p>&copy; 2023 Wilson Campaign | Site built <a href="https://replit.com/@violincat" target="_blank">@ViolinCat13</a> | Contact us at thewilsoncampaign@outlook.com</p>
 </footer>
 
 </html>
