--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Norway has all the things we dont have. They have happiness, they have low emiss
   </div>
   <h2 class="subtitle">About Wilson</h2>
   <div class="block-center">
-    <p>More Text Here<p>
+    <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Link To Bio</a><p>
   </div>
   <h2 class="subtitle">Some Words From The Opposition</h2>
   <div class="block-center">
