--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@ Norway has all the things we dont have. They have happiness, they have low emiss
     <p class="qoute">"I'm good, ... you though" -Graeme Kennedy<p>
     <p class="qoute">"I'm too good..." -Anna W.<p>
   </div>
+    <h2 class="subtitle">Buy Our Merch</h2>
+  <div class="block-center">
+    <img src="wilson.png">
+    <a href=""https://www.youtube.com/watch?v=dQw4w9WgXcQ"">Buy Here</a>
+  </div>
 </main>
 <footer>
   <p>&copy; 2023 Wilson Campaign | Site built <a href="https://replit.com/@violincat" target="_blank">@ViolinCat13</a> | Contact us at thewilsoncampaign@outlook.com</p>
