--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <nav></nav>
 <header>
   <div class="center">
+    <img scr="Untitled design (2).png">
     <h1 class="title">The Wilson Campaign</h1>
   </div>
 </header>
