--- a/index.html
+++ b/index.html
@@ -42,6 +42,17 @@ Norway has all the things we dont have. They have happiness, they have low emiss
     <br>
     <a href=""https://www.youtube.com/watch?v=dQw4w9WgXcQ"">Buy Here</a>
   </div>
+  <div>
+    <h2 class="subtitle">Links 'n Media</h2>
+    <div style="position: relative; width: 100%; height: 0; padding-top: 133.3333%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+    <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFctkfXd2Y&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+    </iframe>
+  </div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFctkfXd2Y&#x2F;view?utm_content=DAFctkfXd2Y&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">WINNING CAMPAIGN</a> by john-wilson
+  </div>
 </main>
 <footer>
   <p>&copy; 2023 Wilson Campaign | Site built by <a href="https://replit.com/@violincat" target="_blank">@ViolinCat13</a> | Contact us at thewilsoncampaign@outlook.com</p>
